--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
   font-family: "Open Sans", sans-serif;
+  background-color: #f5f4f0;
 }
 
 p {
@@ -10,15 +11,46 @@ p {
 
 header img {
   width: 1120px;
+  height: 660px;
+}
+
+header {
+  margin-bottom: 40px;
+}
+
+.readmi {
+  padding-top: 64px;
+  border-top: solid 1px rgb(0, 0, 0, 0.1);
+}
+
+.readmi2{
+    border-top: solid 1px rgb(0, 0, 0, 0.1);
+  padding-top: 40px;
+  text-align: center;
+}
+
+#youngdusan {
+  margin-bottom: 40px;
+}
+
+img {
+  width: 1120px;
+  height: 350px;
+
+  border-radius: 28px;
 }
 
 h1{
   font-size: 36px;
+  margin-bottom: 40px;
+  margin-top: 10px;
 }
 
 h2{
   color: #1b1b1b;
   font-size: 32px;
+  margin-top: 2px;
+  margin-bottom: 8px;
 }
 
 h3{
